# SkillSync

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  README.md  index.html
.github/workflows/: reusable-deploy-website.yml
SkillSync.xcodeproj/: project.pbxproj
SkillsManager.xcodeproj/: project.pbxproj
assets/: index-BS7kg5IC.js  index-CnNqw-pw.css
docs/: agent-orientation.md
docs/plans/: 2026-06-09-agent-skills-manager-design.md  2026-06-09-agent-skills-manager-implementation.md  2026-06-15-xcodegen-assessment.md
docs/releases/: v0.1.0.md
docs/superpowers/plans/: 2026-06-14-macos-project-bootstrap-implementation.md  2026-06-14-macos-project-bootstrap-ui-skeleton-implementation.md
docs/superpowers/specs/: 2026-06-14-macos-project-bootstrap-design.md  2026-06-14-macos-project-bootstrap-ui-skeleton-design.md
macos/SkillSync/App/: SkillSyncApp.swift
macos/SkillSync/Bridge/: CoreBridge.swift  SkillSync-Bridging-Header.h
macos/SkillSync/Models/: AppState.swift  DataModels.swift
macos/SkillSync/Views/: ContentView.swift
macos/SkillsManager/App/: SkillsManagerApp.swift
macos/SkillsManager/Bridge/: CoreBridge.swift  (+1 more)
scripts/: export_confirmed_logo.swift  release.sh  self_signed_codesign.sh  sync_version.sh  version.env  version_utils.sh  website_publish.sh
skills-core/: Cargo.toml
skills-core/.cargo/: config.toml
skills-core/src/: agent_registry.rs  ffi.rs  git_engine.rs  lib.rs  models.rs  scanner.rs  symlink.rs  watcher.rs
skills-core/src/storage/: db.rs
website/: index.html  package-lock.json  package.json
website/src/: main.jsx  styles.css
(+22 files in other folders)
